# ChangeLog for dev-perl/Text-CSV_XS
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.87 2011/09/19 01:15:38 robbat2 Exp $

*Text-CSV_XS-0.850.0 (19 Sep 2011)

  19 Sep 2011; Robin H. Johnson <robbat2@gentoo.org>
  +Text-CSV_XS-0.850.0.ebuild:
  Version bump via perl-bump experimental tool.

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Text-CSV_XS-0.820.0.ebuild:
  Cleanup

*Text-CSV_XS-0.830.0 (09 Aug 2011)

  09 Aug 2011; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.830.0.ebuild:
  Version bump

  08 Aug 2011; Fabian Groffen <grobian@gentoo.org> Text-CSV_XS-0.820.0.ebuild:
  Marked ~x64-macos

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Text-CSV_XS-0.800.ebuild,
  -Text-CSV_XS-0.810.0.ebuild:
  Cleanup

*Text-CSV_XS-0.820.0 (08 May 2011)

  08 May 2011; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.820.0.ebuild:
  Version bump

*Text-CSV_XS-0.810.0 (23 Mar 2011)

  23 Mar 2011; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.810.0.ebuild:
  Version bump

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Text-CSV_XS-0.67.ebuild,
  -Text-CSV_XS-0.73.ebuild, -Text-CSV_XS-0.74.ebuild, -Text-CSV_XS-0.75.ebuild,
  -Text-CSV_XS-0.76.ebuild, -Text-CSV_XS-0.79.ebuild:
  Cleanup

*Text-CSV_XS-0.800 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.800.ebuild:
  Version bump

*Text-CSV_XS-0.79 (27 Nov 2010)

  27 Nov 2010; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.79.ebuild:
  Version bump

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  Text-CSV_XS-0.72.ebuild:
  ppc64 stable wrt #341865

*Text-CSV_XS-0.76 (15 Oct 2010)

  15 Oct 2010; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.76.ebuild:
  Version bump

*Text-CSV_XS-0.75 (09 Oct 2010)

  09 Oct 2010; Torsten Veller <tove@gentoo.org> +Text-CSV_XS-0.75.ebuild:
  Version bump

*Text-CSV_XS-0.74 (30 Sep 2010)

  30 Sep 2010; Robin H. Johnson <robbat2@gentoo.org>