@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Text-CSV_XS-0.72.tgz 108458 RMD160 ed07d011c478b0c9931061de7ad4e50ccd81a18b SHA1 e3a14c59c5c6c45a6a71ed3fea3e1f8a10203d66 SHA256 1d1dac697b010ec30ffcd73b138b7e4f38b7ca36b43116648ba341c8cb1ccbea
 DIST Text-CSV_XS-0.83.tgz 116245 RMD160 284041adc5ee3c778a3a1680e1f383d7319423fe SHA1 2fd97c42767bb8e4b7686459072102ddf6afeab8 SHA256 6e6e6304e370f2b1947b9881c167d8997991b8e1e4eca72be53054a604135811
 DIST Text-CSV_XS-0.85.tgz 116269 RMD160 5e770288c6bd13637a2846a51ad416b3c2e03714 SHA1 432a7db5cde11dd0d09417f584e52e29faf72c10 SHA256 551ea6f192c4dc3bfb31858d097c6351ee6a0c45c84016625b6253ce6c3cba2b
+DIST Text-CSV_XS-0.86.tgz 118092 RMD160 c263555dd0f8d126147e501eb294f759c32f2aed SHA1 c6a69ed9d9be63b22c514762a5b8f6eb7a1ddcac SHA256 68292cb816794aec3590db425e130c547d67a74afd980f654b391e4b60a73e71
 EBUILD Text-CSV_XS-0.72.ebuild 607 RMD160 79212acd075d4bb65e859663cac0d99a80cdb387 SHA1 1c55e5f715495de75a707007148d20c54e5a1518 SHA256 eb7a84f746f02e84b06f4d04b96196f5e1ffa54bb4c431fbd95077480cd5c1fd
 EBUILD Text-CSV_XS-0.830.0.ebuild 669 RMD160 7985a0a2d17da475b9f8fd383fe5d2802a881878 SHA1 cb2269ad0b878f94ac2e03b825d71fe18f1db8d1 SHA256 303ea0fac8217fadc29e1c7f40751e1e0bc0702c0f95b90037ad728c35532410
 EBUILD Text-CSV_XS-0.850.0.ebuild 672 RMD160 ad6d8f8d047ebbce91469a54c96d56f61a18ae2e SHA1 0ddc145f53094a647a336617bc5fc86ee859e57a SHA256 d4f9124e04b37ac1d27885648d04293bd52c0193b37dcb6b73cd0bec88b9582e
-MISC ChangeLog 10914 RMD160 3910e9c752064cf952bca0dcee9299a2600b3c58 SHA1 dbb0549d2565a2236ec4dbd583f202ea2e573e29 SHA256 883fa79c52410ebe87cbff1a9ebc51714d3083d43392f839d1655bc215bbc269
+EBUILD Text-CSV_XS-0.860.0.ebuild 669 RMD160 23c12bef328fbb318433cd988f45e94951ef3170 SHA1 ee615cc948213cbb1b17f741a656a9bbedab09e9 SHA256 509ecfa976edbe17b025cc24ce61e0a59f70c7026654332b381898eef659b4ef
+MISC ChangeLog 11040 RMD160 04b1db393e53f643e2d9c5c024979979142d1481 SHA1 e43b61e445fa224b82f898683aa00e881674b2c5 SHA256 785fcb4cdd5297329d653c3f1189421e339f1697686214e8d9a10b02844e9ed3
 MISC metadata.xml 237 RMD160 d9f7c8a68d7edd537b6d76fe7e36ceed81ed827f SHA1 37a77cf7e3f79e16281605455b2a8a61287de5bd SHA256 5999fd287580cd521f74877e8893681867c8b753225fa44c49d5b4abd876503a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEAREIAAYFAk8dcD8ACgkQV3J2n04EauyA2wCeO/GC2KIxCf/5gmh8hxp/xxDW
+e1YAn2Fq7zxU1dtoNNRVqlhWG30mjsyR
+=QdN2
+-----END PGP SIGNATURE-----
